envoy/envoy.yaml
static_resources:

  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/shortener/"
                route:
                  prefix_rewrite: "/"
                  cluster: url_shortener
              - match:
                  prefix: "/auth/"
                route:
                  prefix_rewrite: "/"
                  cluster: auth
              - match:
                  prefix: "/frontend/"
                route:
                  prefix_rewrite: "/"
                  cluster: frontend

  clusters:
  - name: frontend
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: frontend
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: frontend-1
                port_value: 8002
        - endpoint:
            address:
              socket_address:
                address: frontend-2
                port_value: 8002

  - name: auth
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: auth
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: auth-service-1
                port_value: 8001
        - endpoint:
            address:
              socket_address:
                address: auth-service-2
                port_value: 8001
        - endpoint:
            address:
              socket_address:
                address: auth-service-3
                port_value: 8001

  - name: url_shortener
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: url_shortener
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: url-shortener-1
                port_value: 8000
        - endpoint:
            address:
              socket_address:
                address: url-shortener-2
                port_value: 8000
        - endpoint:
            address:
              socket_address:
                address: url-shortener-3
                port_value: 8000
        - endpoint:
            address:
              socket_address:
                address: url-shortener-4
                port_value: 8000
